// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reference Input Element and Extra create with a valid reference 1`] = `
{
  "extra_id": 1,
  "id": 1,
  "name": "element",
  "nullableExtra_id": null,
}
`;

exports[`Reference Input Element and Extra create with an invalid references 1`] = `
{
  "code": "ERROR_CODE_VALIDATION",
  "data": {
    "extra_extraData_slug": [
      {
        "code": "reference-not-found",
        "params": {
          "value": "baz",
        },
      },
    ],
    "nullableExtra_extraData_slug": [
      {
        "code": "required",
        "params": {},
      },
    ],
  },
  "message": "Validation error",
}
`;

exports[`Reference Input Element and Extra validation error with non-nullable reference 1`] = `
{
  "code": "ERROR_CODE_VALIDATION",
  "data": {
    "extra_extraData_slug": [
      {
        "code": "is-not-nullable",
        "params": {},
      },
    ],
  },
  "message": "Validation error",
}
`;
